fix: api route & card text word wrap

--- a/client/src/components/BlogCard/BlogCard.scss
+++ b/client/src/components/BlogCard/BlogCard.scss
@@ -50,6 +50,7 @@
     font-size: 16px;
     line-height: 150%;
     color: rgba(38, 22, 0, 0.8);
+    word-wrap: break-word;
   }
 
   &__buttons {
